--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Graveca's Just
+description: My starter template
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://graveca.github.io/just
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/graveca/just
